--- a/sections/homepage.liquid
+++ b/sections/homepage.liquid
@@ -1,5 +1,5 @@
 <div class="homepage">
-  <div class="flex w-full h-screen justify-center items-center bg-slate-400">
-    <h1>Blue blot</h1>
+  <div class="flex w-full h-screen justify-center items-center">
+    <h1 class="text-3xl text-yellow-600 font-semibold">Blue blot</h1>
   </div>
 </div>
