--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -11,14 +11,17 @@
     <!-- Header hook for plugins -->
     {{ 'tailwind.css' | asset_url | stylesheet_tag }}
     {{ 'application.css' | asset_url | stylesheet_tag }}
-    {{ 'application.js' | asset_url | script_tag }}
+    <script src="{{ 'application.js' |  asset_url }}" defer></script>
+
   </head>
 
   {% comment %} #styles {% endcomment %}
 
 
   <body>
+    {% section "header" %}
     <main role="main">
+
       {{ content_for_layout }}
     </main>
   </body>
