--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -10,6 +10,7 @@
   {{ content_for_header }}
     <!-- Header hook for plugins -->
     {{ 'tailwind.css' | asset_url | stylesheet_tag }}
+    {{ 'style.css' | asset_url | stylesheet_tag }}
     {{ 'application.css' | asset_url | stylesheet_tag }}
 
     {% if settings.favicon != blank %}
