--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -4,25 +4,33 @@
       <div class="flex justify-center items-center py-6 md:justify-start md:space-x-10">
         <!-- STORE NAME / STORE LOGO -->
         <div class="flex justify-start lg:flex-1 truncate">
-          <h1 class="text-xl font-bold truncate">
-            {% if settings.logo != blank %}
-              <img
-                src="{{ settings.logo |  image_url  }}"
-                width=""
-                height="">
-            {% else %}
-              {{ shop.name }}
-            {% endif %}
-          </h1>
+          <a href="{{ routes.root_url }}">
+            <h1 class="text-xl font-bold truncate">
+              {% if settings.logo != blank %}
+                <img
+                  src="{{ settings.logo |  image_url  }}"
+                  width=""
+                  height="">
+              {% else %}
+                {{ shop.name }}
+              {% endif %}
+            </h1>
+          </a>
         </div>
 
         <!-- NAVIGATION MENU -->
         <nav class="hidden md:flex space-x-10 ">
           {% for link in section.settings.menu.links %}
             {% if link.links.size > 0 %}
-              <div class="relative pareant-menu-item">
+              <div data-rotate-wrapper class="relative pareant-menu-item">
                 <button type="button" class="inline-flex items-center text-base text-gray-500 hover:text-gray-900">
-                  {{ link.title }} +
+                  <span>
+                    {{ link.title }}
+                  </span>
+                  {% render 'add'
+                    , class: 'font-semibold text-2xl h-6 w-6  leading-none  '
+                    , attr: 'data-rotate-180' %}
+
                 </button>
                 <ul class="absolute left-0 top-[100%] child-menu-links ">
                   {% for childlink in link.links %}
@@ -41,12 +49,15 @@
         </nav>
 
         <div class="hidden md:flex items-center justify-end md:flex-1 space-x-5">
-          <a href="/cart" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
-            Cart
+          <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
+            {% render 'shopping-bag'
+              , class: 'w-6 h-6' %}
           </a>
+          {% if shop.customer_accounts_enabled %}
+            <a href="{{ routes.account_login_url }}" class="badge-success badge-sm text-sm rounded-md">Login</a>
+            <a href="{{ routes.account_register_url }}" class="badge-error badge-sm text-sm rounded-md">Register</a>
+          {% endif %}
 
-          <a class="text-base text-gray-500 hover:text-gray-900">Login</a>
-          <a class="text-base text-gray-500 hover:text-gray-900">Register</a>
         </div>
       </div>
     </div>
