--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,79 +1,123 @@
-<header>
+{%- liquid
+  assign border_bottom_class = ''
+  if section.settings.header_border_bottom == true
+    assign border_bottom_class = 'border-b-2'
+  else
+    assign border_bottom_class = ''
+  endif
+-%}
+
+<header class="{{ border_bottom_class }}">
   <div class="relative bg-white">
     <div class="mx-auto px-4 sm:px-6">
       <div class="flex justify-center items-center py-6 md:justify-start md:space-x-10">
-        <!-- STORE NAME / STORE LOGO -->
-        <div class="flex justify-start lg:flex-1 truncate">
-          <a href="{{ routes.root_url }}">
-            <h1 class="text-xl font-bold truncate">
-              {% if settings.logo != blank %}
-                <img
-                  src="{{ settings.logo |  image_url  }}"
-                  width=""
-                  height="">
-              {% else %}
-                {{ shop.name }}
-              {% endif %}
-            </h1>
-          </a>
-        </div>
+        {% for block in section.blocks %}
+          {% case block.type %}
+            {% when 'logo' %}
+              <div class="flex justify-start lg:flex-1 truncate">
+                <a href="{{ routes.root_url }}">
+                  <h1 class="text-xl font-bold truncate">
+                    {% if settings.logo != blank %}
+                      <img
+                        src="{{ settings.logo |  image_url  }}"
+                        width=""
+                        height="">
+                    {% else %}
+                      {{ shop.name }}
+                    {% endif %}
+                  </h1>
+                </a>
+              </div>
+            {% when 'nav' %}
+              <nav class="hidden md:flex space-x-10 ">
+                {% for link in block.settings.menu.links %}
+                  {% if link.links.size > 0 %}
+                    <div data-rotate-wrapper class="relative pareant-menu-item">
+                      <button type="button" class="inline-flex items-center text-base text-gray-500 hover:text-gray-900">
+                        <span>
+                          {{ link.title }}
+                        </span>
+                        {% render 'add'
+                          , class: 'font-semibold text-2xl h-6 w-6  leading-none  '
+                          , attr: 'data-rotate-180' %}
 
-        <!-- NAVIGATION MENU -->
-        <nav class="hidden md:flex space-x-10 ">
-          {% for link in section.settings.menu.links %}
-            {% if link.links.size > 0 %}
-              <div data-rotate-wrapper class="relative pareant-menu-item">
-                <button type="button" class="inline-flex items-center text-base text-gray-500 hover:text-gray-900">
-                  <span>
-                    {{ link.title }}
-                  </span>
-                  {% render 'add'
-                    , class: 'font-semibold text-2xl h-6 w-6  leading-none  '
-                    , attr: 'data-rotate-180' %}
-
-                </button>
-                <ul class="absolute left-0 top-[100%] child-menu-links ">
-                  {% for childlink in link.links %}
-                    <li class="mb-2  ">
-                      <a class="child-menu-link" href="{{ childlink.url }}">{{ childlink.title }}</a>
-                    </li>
-                  {% endfor %}
-                </ul>
+                      </button>
+                      <ul class="absolute left-0 top-[100%] child-menu-links ">
+                        {% for childlink in link.links %}
+                          <li class="mb-2  ">
+                            <a class="child-menu-link" href="{{ childlink.url }}">{{ childlink.title }}</a>
+                          </li>
+                        {% endfor %}
+                      </ul>
+                    </div>
+                  {% else %}
+                    <div class="relative">
+                      <a href="#" class="text-base text-gray-500 hover:text-gray-900">{{ link.title }}</a>
+                    </div>
+                  {% endif %}
+                {% endfor %}
+              </nav>
+            {% when 'account' %}
+              <div class="hidden md:flex items-center justify-end md:flex-1 space-x-5">
+                <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
+                  {% render 'shopping-bag'
+                    , class: 'w-6 h-6' %}
+                </a>
+                {% if shop.customer_accounts_enabled %}
+                  <a href="{{ routes.account_login_url }}" class="badge-success badge-sm text-sm rounded-md">Login</a>
+                  <a href="{{ routes.account_register_url }}" class="badge-error badge-sm text-sm rounded-md">Register</a>
+                {% endif %}
               </div>
             {% else %}
-              <div class="relative">
-                <a href="#" class="text-base text-gray-500 hover:text-gray-900">{{ link.title }}</a>
-              </div>
-            {% endif %}
-          {% endfor %}
-        </nav>
+              <div>header</div>
+          {% endcase %}
+        {% endfor %}
+      <!-- STORE NAME / STORE LOGO -->
 
-        <div class="hidden md:flex items-center justify-end md:flex-1 space-x-5">
-          <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
-            {% render 'shopping-bag'
-              , class: 'w-6 h-6' %}
-          </a>
-          {% if shop.customer_accounts_enabled %}
-            <a href="{{ routes.account_login_url }}" class="badge-success badge-sm text-sm rounded-md">Login</a>
-            <a href="{{ routes.account_register_url }}" class="badge-error badge-sm text-sm rounded-md">Register</a>
-          {% endif %}
 
-        </div>
+      <!-- NAVIGATION MENU -->
+
+
+      {% comment %}  {% endcomment %}
       </div>
     </div>
   </div>
 </header>
-
 {% schema %}
   {
     "name": "header",
     "tag": "section",
     "settings": [
       {
-        "type": "link_list",
-        "id": "menu",
-        "default": "main-menu",
-        "label": "Header Menu"
+        "type": "checkbox",
+        "label": "Border bottom",
+        "default": false,
+        "id": "header_border_bottom"
+      }
+    ],
+    "blocks": [
+      {
+        "type": "logo",
+        "limit": 1,
+        "name": "Logo"
+      },
+      {
+        "type": "nav",
+        "limit": 1,
+        "name": "nav",
+        "settings": [
+          {
+            "type": "link_list",
+            "id": "menu",
+            "default": "main-menu",
+            "label": "Header Menu"
+          }
+        ]
+      },
+      {
+        "type": "account",
+        "limit": 1,
+        "name": "account"
       }
     ],
     "presets": [
