--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -20,8 +20,8 @@
                     {% if settings.logo != blank %}
                       <img
                         src="{{ settings.logo |  image_url  }}"
-                        width=""
-                        height="">
+                        width="100"
+                        height="100">
                     {% else %}
                       {{ shop.name }}
                     {% endif %}
