--- a/src/input.css
+++ b/src/input.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 @layer components {
+  .my_container {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
   .pareant-menu-item {
   }
 
