--- a/src/input.css
+++ b/src/input.css
@@ -59,4 +59,14 @@
   .badge-warning {
     @apply bg-yellow-500 text-white border-yellow-600 hover:bg-yellow-700;
   }
+
+  /* tags */
+
+  .tag {
+    @apply border  tracking-wide text-sm border-blue-500 rounded-xl px-2 py-2 bg-opacity-50 text-blue-500 hover:bg-opacity-90 hover:bg-blue-500 hover:text-white duration-300 transition-all bg-blue-100 capitalize;
+  }
+
+  .active_tag {
+    @apply border  tracking-wide text-sm border-blue-500 rounded-xl px-2 py-2 bg-opacity-90 text-white hover:bg-opacity-50 hover:text-white bg-blue-500 capitalize;
+  }
 }
