--- a/sections/cart-1.liquid
+++ b/sections/cart-1.liquid
@@ -27,11 +27,16 @@
                 {% for item in cart.items %}
                   <div class="grid border-2 md:border-0 grid-cols-6 mb-2 ">
                     <div class="md:col-span-1 col-span-3  border-b-2 border-r-2 p-4 md:border-2 md:border-r-0 flex justify-center items-center">
-                      <img
-                        width="150"
-                        height="150"
-                        src="{{ item.image |  image_url: width: 100, height: 100  }}"
-                        alt="{{ item.title }}">
+                      {% if item.image %}
+                        <img
+                          width="150"
+                          height="150"
+                          src="{{ item.image |  image_url: width: 100, height: 100  }}"
+                          alt="{{ item.title }}">
+                      {% else %}
+                        {{ 'product-1' | placeholder_svg_tag: 'w-[150px] h-[150px]' }}
+                      {% endif %}
+
                     </div>
                     <div class="md:col-span-2 border-b-2 col-span-3 p-4 md:border-2">
                       <h2 class="text-xl font-bold mb-2">{{ item.title }}</h2>
