--- a/sections/cart-footer-1.liquid
+++ b/sections/cart-footer-1.liquid
@@ -1,7 +1,7 @@
 <div class="class grid grid-cols-4 my_container ">
   <div class="cart_note col-span-3 p-4">
     <textarea
-      class="border-2 w-full "
+      class="border-2 w-full p-4 "
       name=""
       id="">Notes</textarea>
   </div>
@@ -9,12 +9,12 @@
     <button
       type="submit"
       form="cart"
-      class="px-10 py-4 bg-green-400 hover:bg-green-600 rounded-md"
+      class="px-10 w-full py-4 bg-green-400 hover:bg-green-600 rounded-md"
       type="submit">Update Cart</button>
     <button
       type="submit"
       id="checkout"
-      class="mt-4 px-10 py-4 bg-black text-white hover:bg-gray-900 rounded-md"
+      class="mt-4 w-full px-10 py-4 bg-black text-white hover:bg-gray-900 rounded-md"
       name="checkout"
       {% if cart == empty %}
       disabled
