--- a/sections/cart-1.liquid
+++ b/sections/cart-1.liquid
@@ -3,11 +3,7 @@
     <div class="cart_table p-4 my-10 my_container">
       <div class="mt-4 flex justify-between items-center ">
         <h2 class="text-3xl capitalize text-gray-700 ">Your cart</h2>
-        <a
-          href="{{ routes.all_products_collection_url }}"
-          class="text-blue-600 font-semibold hover:text-blue-800 capitalize underline"
-          >Continue Shopping</a
-        >
+        <a href="{{ routes.all_products_collection_url }}" class="text-blue-600 font-semibold hover:text-blue-800 capitalize underline">Continue Shopping</a>
       </div>
       <div class="cart_form mt-10">
         <form
@@ -15,8 +11,7 @@
           action="{{ routes.cart_url }}"
           method="post"
           id="cart"
-          data-section-id="{{ section.id }}"
-        >
+          data-section-id="{{ section.id }}">
           <div class="w-full">
             <div class="w-full text-left p-4 ">
               <div class="grid grid-cols-6 border-b  border-b-blue-950">
@@ -34,8 +29,7 @@
                           width="100"
                           height="100"
                           src="{{ item.image |  image_url: width: 100, height: 100  }}"
-                          alt="{{ item.title }}"
-                        >
+                          alt="{{ item.title }}">
                       {% else %}
                         {{ 'product-1' | placeholder_svg_tag: 'w-[150px] h-[150px]' }}
                       {% endif %}
@@ -43,28 +37,35 @@
                     <div class="md:col-span-2 border-b-2 col-span-3 p-4 md:border-2">
                       <h2 class="text-xl font-bold mb-2">{{ item.title }}</h2>
                       <p class="text-xl font-semibold">{{ item.price | money }}</p>
+
+                      {%- unless item.product.has_only_default_variant -%}
+                        <p>{{ item.variant.title }}</p>
+                      {%- endunless -%}
+
                     </div>
                     <div class="md:col-span-2 border-r-2 p-4 md:border-2 md:border-l-0 col-span-3 flex justify-center items-center">
                       <div class="grid grid-cols-6 justify-center items-center">
                         <button class="col-span-1 flex h-[40px] justify-center items-center border-2 border-r-0 bg-white">
-                          {%- render 'plus', class: 'w-8 h-8 md:w-6 md:h-6' -%}
+                          {%- render 'plus'
+                            , class: 'w-8 h-8 md:w-6 md:h-6' -%}
                         </button>
                         <input
                           min="{{ item.variant.quantity_rule.min }}"
                           {% if item.variant.quantity_rule.max != null %}
-                            max="{{ item.variant.quantity_rule.max }}"
+                          max="{{ item.variant.quantity_rule.max }}"
                           {% endif %}
                           name="updates[]"
                           type="number"
                           value="{{ item.quantity }}"
-                          class="col-span-2 border-2 p-2 text-xl  h-[40px] text-center"
-                        >
+                          class="col-span-2 border-2 p-2 text-xl  h-[40px] text-center">
                         <button class="col-span-1 flex justify-center  h-[40px] bg-white items-center border-2 border-l-0">
-                          {%- render 'minus', class: 'w-8 h-8' -%}
+                          {%- render 'minus'
+                            , class: 'w-8 h-8' -%}
                         </button>
-                        <button class="col-span-2 flex justify-center items-center">
-                          {%- render 'trash', class: 'w-6 h-6 font-semibold text-red-400 hover:text-red-600' -%}
-                        </button>
+                        <a href="{{ item.url_to_remove }}" class="col-span-2 flex justify-center items-center">
+                          {%- render 'trash'
+                            , class: 'w-6 h-6 font-semibold text-red-400 hover:text-red-600' -%}
+                        </a>
                       </div>
                     </div>
                     <div class="md:col-span-1 p-4 md:border-2 md:border-l-0 col-span-3 flex justify-center items-center ">
@@ -77,7 +78,7 @@
               </div>
             </div>
           </div>
-          {% comment %} #submit {% endcomment %}
+        {% comment %} #submit {% endcomment %}
         </form>
       </div>
     </div>
@@ -95,39 +96,39 @@
 </div>
 
 {% schema %}
-{
-  "name": "Cart One",
-  "tag": "section",
-  "settings": [
-    {
-      "type": "header",
-      "content": "When Cart is Empty"
-    },
-    {
-      "type": "text",
-      "id": "empty_cart_heading",
-      "default": "Your cart is empty",
-      "label": "Write Heading"
-    },
-    {
-      "type": "text",
-      "id": "empty_cart_redirect_link_title",
-      "label": "Link Title",
-      "info": "Empty cart redirect link title"
-    },
-    {
-      "type": "url",
-      "id": "empty_cart_redirect_link",
-      "label": "Link",
-      "info": "Empty cart redirect link",
-      "default": "/"
-    }
-  ],
-  "presets": [
-    {
-      "name": "Cart One",
-      "settings": {}
-    }
-  ]
-}
+  {
+    "name": "Cart One",
+    "tag": "section",
+    "settings": [
+      {
+        "type": "header",
+        "content": "When Cart is Empty"
+      },
+      {
+        "type": "text",
+        "id": "empty_cart_heading",
+        "default": "Your cart is empty",
+        "label": "Write Heading"
+      },
+      {
+        "type": "text",
+        "id": "empty_cart_redirect_link_title",
+        "label": "Link Title",
+        "info": "Empty cart redirect link title"
+      },
+      {
+        "type": "url",
+        "id": "empty_cart_redirect_link",
+        "label": "Link",
+        "info": "Empty cart redirect link",
+        "default": "/"
+      }
+    ],
+    "presets": [
+      {
+        "name": "Cart One",
+        "settings": {}
+      }
+    ]
+  }
 {% endschema %}
