--- a/sections/collection-one.liquid
+++ b/sections/collection-one.liquid
@@ -38,7 +38,8 @@
               {% for product in collection.products %}
                 <li class="border-2">
                   {% render 'product-card-1'
-                    , product: product %}
+                    , product: product
+                    , forloop: forloop %}
                 </li>
               {% endfor %}
             </ul>
