--- a/src/input.css
+++ b/src/input.css
@@ -9,6 +9,13 @@
     padding-left: 40px;
     padding-right: 40px;
   }
+
+  .btn {
+    @apply px-4 py-2 rounded-md text-center duration-100 transition-all cursor-pointer;
+  }
+  .btn-full {
+    @apply px-4 py-2 w-full text-center rounded-md text-center duration-100 transition-all cursor-pointer;
+  }
   .pareant-menu-item {
   }
 
