--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -33,4 +33,48 @@
       {{ content_for_layout }}
     </main>
   </body>
+
+  <script>
+      document.addEventListener('DOMContentLoaded', () => {
+    const productCardAddtoCart = () => {
+      const addToCartBtn = document.querySelectorAll('[data-product-card-id]')
+      
+      addToCartBtn.forEach((btn) => {
+        btn.addEventListener( 'click', (e) => {
+          const productId = btn.getAttribute('data-variant-id')
+          let formData = {
+          'items': [{
+            'id': productId,
+            'quantity': 1
+            }]
+          };
+          
+          fetch(window.Shopify.routes.root + 'cart/add.js', {
+            method: 'POST',
+            headers: {
+          'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(formData)
+          })
+          .then(response => {
+            return response.json();
+          })
+          .catch((error) => {
+            console.error('Error:', error);
+          });
+          
+    
+        })// 
+      })
+      
+      
+      
+       }
+    
+       productCardAddtoCart()
+    
+      })
+  </script>
+
+
 </html>
