--- a/sections/collection-one.liquid
+++ b/sections/collection-one.liquid
@@ -36,10 +36,12 @@
           {% paginate collection.products by 4 %}
             <ul class="grid grid-cols-1 md:grid-cols-2 gap-4 lg:grid-cols-3">
               {% for product in collection.products %}
-                <li class="border-2">
+                <li class="">
                   {% render 'product-card-1'
                     , product: product
-                    , forloop: forloop %}
+                    , forloop: forloop
+                    , section: section
+                  %}
                 </li>
               {% endfor %}
             </ul>
@@ -56,60 +58,7 @@
   </div>
 </section>
 
-<style>
-  /* Parent container */
-  .paginate_default {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    /* Space between items */
-    font-family: Arial
-    , sans-serif;
-  }
-
-  /* Common styles for all child elements */
-  .paginate_default .page,
-  .paginate_default .deco,
-  .paginate_default .next {
-    padding: 6px 12px;
-    border-radius: 4px;
-    text-decoration: none;
-    color: #333;
-    font-size: 14px;
-  }
-
-  /* Current page */
-  .paginate_default .page.current {
-    background-color: #e2e8f0;
-    /* Light gray background */
-    color: #333;
-    font-weight: bold;
-  }
-
-  /* Links inside pages */
-  .paginate_default .page a {
-    color: inherit;
-    text-decoration: none;
-  }
-
-  /* Hover effect for pages and next button */
-  .paginate_default .page a:hover,
-  .paginate_default .next a:hover {
-    background-color: #e2e8f0;
-    /* Light gray background on hover */
-  }
-
-  /* Ellipsis (deco) */
-  .paginate_default .deco {
-    color: #666;
-  }
-
-  /* Next button */
-  .paginate_default .next a {
-    color: #333;
-    text-decoration: none;
-  }
-</style>
+<style></style>
 
 {% schema %}
   {
@@ -120,11 +69,26 @@
         "type": "header",
         "content": "Collection Page Banner"
       },
-
       {
         "type": "image_picker",
         "id": "collection_one_banner_image",
         "label": "Collection one banner image"
+      },
+      {
+        "type": "select",
+        "id": "add_to_cart_type",
+        "label": "Add to cart type",
+        "default": "api",
+        "options": [
+          {
+            "label": "Form type",
+            "value": "form"
+          },
+          {
+            "label": "Api call",
+            "value": "api"
+          }
+        ]
       }
     ],
     "presets": [
