--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -731,12 +731,16 @@ video {
   position: relative;
 }
 
-.left-0 {
-  left: 0px;
+.-right-2 {
+  right: -0.5rem;
 }
 
-.right-0 {
-  right: 0px;
+.-top-3 {
+  top: -0.75rem;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .top-0 {
@@ -745,22 +749,6 @@ video {
 
 .top-\[100\%\] {
   top: 100%;
-}
-
-.-top-2 {
-  top: -0.5rem;
-}
-
-.-top-3 {
-  top: -0.75rem;
-}
-
-.-right-3 {
-  right: -0.75rem;
-}
-
-.-right-2 {
-  right: -0.5rem;
 }
 
 .z-10 {
@@ -829,6 +817,10 @@ video {
   margin-top: 1rem;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
 .block {
   display: block;
 }
@@ -855,6 +847,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-5 {
+  height: 1.25rem;
 }
 
 .h-6 {
@@ -885,12 +881,24 @@ video {
   height: 100vh;
 }
 
-.h-4 {
-  height: 1rem;
+.h-\[50px\] {
+  height: 50px;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-\[20px\] {
+  height: 20px;
+}
+
+.h-\[10px\] {
+  height: 10px;
+}
+
+.h-\[30px\] {
+  height: 30px;
+}
+
+.h-9 {
+  height: 2.25rem;
 }
 
 .min-h-\[500px\] {
@@ -899,6 +907,10 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-6 {
@@ -917,12 +929,24 @@ video {
   width: 100%;
 }
 
-.w-4 {
-  width: 1rem;
+.w-\[50px\] {
+  width: 50px;
 }
 
-.w-5 {
-  width: 1.25rem;
+.w-\[20px\] {
+  width: 20px;
+}
+
+.w-\[10px\] {
+  width: 10px;
+}
+
+.w-\[30px\] {
+  width: 30px;
+}
+
+.w-9 {
+  width: 2.25rem;
 }
 
 .cursor-pointer {
@@ -1007,16 +1031,20 @@ video {
   white-space: nowrap;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-full {
-  border-radius: 9999px;
 }
 
 .rounded-b-md {
@@ -1062,6 +1090,11 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
 }
 
+.border-violet-800 {
+  --tw-border-opacity: 1;
+  border-color: rgb(91 33 182 / var(--tw-border-opacity, 1));
+}
+
 .border-b-blue-950 {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(23 37 84 / var(--tw-border-opacity, 1));
@@ -1092,6 +1125,11 @@ video {
   background-color: rgb(21 128 61 / var(--tw-bg-opacity, 1));
 }
 
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
+}
+
 .bg-slate-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity, 1));
@@ -1112,11 +1150,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
-}
-
 .bg-opacity-35 {
   --tw-bg-opacity: 0.35;
 }
@@ -1130,6 +1163,10 @@ video {
      object-fit: cover;
 }
 
+.p-0 {
+  padding: 0px;
+}
+
 .p-12 {
   padding: 3rem;
 }
@@ -1140,10 +1177,6 @@ video {
 
 .p-4 {
   padding: 1rem;
-}
-
-.p-0 {
-  padding: 0px;
 }
 
 .px-10 {
@@ -1289,6 +1322,10 @@ video {
 
 .line-through {
   text-decoration-line: line-through;
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-transform {
